# models/person.go
@@ -1,0 +1,7 @@
+package models
+
+type Person struct {
+	Name    string `json:"name"`
+	Age     int    `json:"age"`
+	Address string `json:"address"`
+}
