# router/app.go
@@ -3,6 +3,7 @@ package router
 import (
 	"ginchat/docs"
 	"ginchat/service"
+	"html/template"
 
 	"github.com/gin-gonic/gin"
 	swaggerfiles "github.com/swaggo/files"
@@ -18,6 +19,29 @@ func Router() *gin.Engine {
 
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 	r.GET("/index", service.GetIndex)
-	r.GET("/uesr/getlist", service.GetUserList)
+	userGroup := r.Group("/user")
+	{
+		userGroup.GET("/getUserList", service.GetUserList)
+		userGroup.GET("/createUser", service.CreateUser)
+		userGroup.GET("/deleteUser", service.DeleteUser)
+		userGroup.POST("/updateUser", service.UpdateUser)
+		userGroup.GET("/getUserByNameAndPwd", service.GetUserByNameAndPwd)
+	}
+	//发送消息
+	r.GET("/user/sendMsg", service.SendMsg)
+
+	r.POST("/postPerson", service.PostPerson)
+
+	r.GET("/a", func(c *gin.Context) {
+
+		ind, err := template.ParseFiles("web/a.html",
+			"web/b.html")
+		if err != nil {
+			panic(err)
+		}
+		ind.Execute(c.Writer, "user")
+
+	})
+
 	return r
 }
